fix tv-icon spacing on mobile

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -470,7 +470,7 @@
 }
 
 .header__tv-icon {
-  margin-right: 10vw;
+  padding-right: 10vw;
   color: white; 
   font-size: 20px; 
 }
